--- a/My_Theme_Collection/BubblesReturns.theme.css
+++ b/My_Theme_Collection/BubblesReturns.theme.css
@@ -9,6 +9,11 @@
 	background: url(https://images.alphacoders.com/151/151713.jpg) 30%/cover;
 }
 
+.colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O) {
+  background-color: rgba(0, 0, 0, .33);
+  color: #fff;
+}
+
 .sidebar-2K8pFh,
 .container-2lgZY8,
 .theme-dark .layer-3QrUeG,
