--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -11,6 +11,10 @@
   top: 1px !important;
 }
 
+.colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O) {
+  background-color: rgba(0, 0, 0, .33);
+  color: #fff;
+}
  
 .theme-dark .layers-3iHuyZ {
   background: rgba(0, 0, 0, 0.7);
