--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -17,6 +17,11 @@
     color: white;
 }
 
+.colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O) {
+    background-color: rgba(0, 0, 0, .33);
+    color: #fff;
+}
+
 .theme-dark .layer-3QrUeG,
 .sidebar-2K8pFh,
 .scroller-305q3I,
