--- a/My_Theme_Collection/Winter_Returns.theme.css
+++ b/My_Theme_Collection/Winter_Returns.theme.css
@@ -17,6 +17,11 @@
     color: white;
 }
 
+.colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O) {
+    background-color: rgba(0, 0, 0, .33);
+    color: #fff;
+}
+
 .theme-dark .contentRegion-3nDuYy,
 .contentRegionScroller-26nc1e,
 .theme-dark .sidebarRegion-VFTUkN,
