--- a/My_Theme_Collection/CatJar.theme.css
+++ b/My_Theme_Collection/CatJar.theme.css
@@ -11,6 +11,11 @@
   background-color: rgba(0,0,0,.76);
 }
 
+.colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O) {
+  background-color: rgba(0, 0, 0, .33);
+  color: #fff;
+}
+
 .standardSidebarView-3F1I7i,
 .sidebarRegionScroller-3MXcoP,
 .contentRegion-3nDuYy,
