--- a/My_Theme_Collection/Sunset_Theme.theme.css
+++ b/My_Theme_Collection/Sunset_Theme.theme.css
@@ -10,6 +10,11 @@
     background-color: rgba(0, 0, 0, 0.52);
 }
 
+.colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O) {
+    background-color: rgba(0, 0, 0, .33);
+    color: #fff;
+}
+
 .standardSidebarView-3F1I7i,
 .theme-dark .layer-3QrUeG,
 .contentRegionScroller-26nc1e,
