More Small Changes

--- a/My_Theme_Collection/AkameNoKill.theme.css
+++ b/My_Theme_Collection/AkameNoKill.theme.css
@@ -1129,7 +1129,7 @@
   color: white;
 }
 
-.children-19S4PO:after, .form-2fGMdU:before, .theme-dark .option-96V44q.selected-rZcOL-:after,
+.theme-dark .children-19S4PO:after, .form-2fGMdU:before, .theme-dark .option-96V44q.selected-rZcOL-:after,
 .theme-dark .option-96V44q:after, .divider-3FBTu8 {
   background: none;
 }
