--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -18,6 +18,9 @@
   color: #fff;
 }
 
+.theme-dark .children-19S4PO:after {
+  background: none;
+}
 
 .theme-dark .layers-3iHuyZ {
   background: rgba(0, 0, 0, 0.7);
