--- a/My_Theme_Collection/Kemono_Friends.theme.css
+++ b/My_Theme_Collection/Kemono_Friends.theme.css
@@ -17,6 +17,10 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     top: -1px !important;
 }
 
+.theme-dark .children-19S4PO:after {
+    background: none;
+}
+
 .colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O) {
     background-color: rgba(0, 0, 0, .33);
     color: #fff;
