--- a/My_Theme_Collection/No_Game_No_Life.theme.css
+++ b/My_Theme_Collection/No_Game_No_Life.theme.css
@@ -15,6 +15,10 @@
     color: white;
 }
 
+.theme-dark .children-19S4PO:after {
+    background: none;
+}
+
 .wrapper-1BJsBx.selected-bZ3Lue .childWrapper-anI2G9, 
 .wrapper-1BJsBx:hover .childWrapper-anI2G9 {
     background-color: #901E50;
