--- a/My_Theme_Collection/Sunset_Theme.theme.css
+++ b/My_Theme_Collection/Sunset_Theme.theme.css
@@ -24,6 +24,9 @@
     background-color: transparent;
 }
 
+.theme-dark .children-19S4PO:after {
+    background: none;
+}
 
 .theme-dark .closeButton-1tv5uR {
     border-color:black;
