--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -15,6 +15,11 @@
     color: white;
 }
 
+
+.theme-dark .children-19S4PO:after {
+    background: none;
+}
+
 .colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O) {
     background-color: rgba(0, 0, 0, .33);
     color: #fff;
