--- a/My_Theme_Collection/BNHA.theme.css
+++ b/My_Theme_Collection/BNHA.theme.css
@@ -18,6 +18,10 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
 }
 
+.theme-dark .children-19S4PO:after {
+    background: none;
+}
+
 .colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O) {
     background-color: rgba(0, 0, 0, .33);
     color: #fff;
