--- a/My_Theme_Collection/CatJar.theme.css
+++ b/My_Theme_Collection/CatJar.theme.css
@@ -16,6 +16,10 @@
   color: #fff;
 }
 
+.theme-dark .children-19S4PO:after {
+  background: none;
+}
+
 .standardSidebarView-3F1I7i,
 .sidebarRegionScroller-3MXcoP,
 .contentRegion-3nDuYy,
