--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -15,6 +15,10 @@
   background-color: rgba(0, 0, 0, .33);
   color: #fff;
 }
+
+.theme-dark .children-19S4PO:after {
+  background: none;
+}
  
 .theme-dark .layers-3iHuyZ {
   background: rgba(0, 0, 0, 0.7);
