--- a/My_Theme_Collection/AkameNoKill.theme.css
+++ b/My_Theme_Collection/AkameNoKill.theme.css
@@ -10,11 +10,6 @@
   background-color: rgba(0,0,0,.7);
 }
 
-.colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O) {
-  background-color: rgba(0, 0, 0, .33);
-  color: #fff;
-}
-
 .standardSidebarView-3F1I7i,
 .sidebarRegionScroller-3MXcoP,
 .contentRegion-3nDuYy,
@@ -23,6 +18,15 @@
 .contentRegionScroller-26nc1e,
 .scroller-305q3I {
   background-color: transparent;
+}
+
+.theme-dark .children-19S4PO:after {
+  background: none;
+}
+
+.colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O) {
+  background-color: rgba(0, 0, 0, .33);
+  color: #fff;
 }
 
 .sidebar-CFHs9e {
@@ -322,7 +326,7 @@
   border: 2px solid #9b2742;
 }
 
-.theme-dark .footer-3rDWdC {
+.theme-dark .footer-2gL1pp {
   background-color: #0b0b0b;
   box-shadow: none;
 }
@@ -1129,7 +1133,7 @@
   color: white;
 }
 
-.theme-dark .children-19S4PO:after, .form-2fGMdU:before, .theme-dark .option-96V44q.selected-rZcOL-:after,
+.children-19S4PO:after, .form-2fGMdU:before, .theme-dark .option-96V44q.selected-rZcOL-:after,
 .theme-dark .option-96V44q:after, .divider-3FBTu8 {
   background: none;
 }
@@ -1328,12 +1332,17 @@
   overflow: visible;
 }
 
-.jumpButton-1ol35X, .jumpButton-3DTcS_ {
+.jumpButton-1ol35X, .jumpButton-3DTcS_, .jumpButton-2dvRSC {
   border-radius: 6px;
   padding: 4px 13px;
   background-color: #9b2742;
   border: 1px solid #ad3950;
   color: white;
+}
+
+.emptyChannelIcon-3IXV5M {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .26);
 }
 
 .searchResult-2N9RV4.expanded-ovgtuV {
@@ -1403,7 +1412,8 @@
   opacity: 1;
 }
 
-.messagesPopoutWrap-1MQ1bW {
+.messagesPopoutWrap-1MQ1bW,
+.container-enaOkj {
   background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #9b2742 100%);
   box-shadow: none;
   border-radius: 6px;
@@ -1411,6 +1421,11 @@
 
 .guildName-1Bc3Ta, .mentionFilter-1PQ6ey .label-12YslM {
   color: silver;
+}
+
+.messages-3G3erD {
+  background-color: rgba(0,0,0,.5);
+  border-radius: 4px;
 }
 
 .messageGroupWrapper-o-Zw7G {
@@ -1477,20 +1492,20 @@
 }
 
 
-.navButtonActive-3RPAJy {
+.navButtonActive-1MkytQ {
   border-left: none;
   background: #212121;
   box-shadow: none;
 }
 
 
-.navButtonActive-3RPAJy:hover {
+.navButtonActive-1MkytQ:hover {
   background: #ad3950;
 }
 
 
 
-.navButtonActive-3RPAJy.active, .navButtonActive-3RPAJy.active:hover {
+.navButtonActive-1MkytQ.active, .navButtonActive-1MkytQ.active:hover {
   background-color: #9b2742;
 }
 
@@ -1503,7 +1518,7 @@
   color: white;
 }
 
-.contentWrapper-2txmjs,
+.contentWrapper-SvZHNd,
 .emojiPicker-3PwZFl {
   border-radius: 0 0 7px 7px;
   background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #9b2742 100%);
@@ -1525,11 +1540,11 @@
 
 
 
-.categoryWrapper-UZ5YNj {
+.wrapper-1-Fsb8 {
   background-color: rgba(0, 0, 0, .3);
 }
 
-.inspector-sdLnLS, .wrapper-2N7X54 {
+.inspector-sdLnLS, .wrapper-2Gsate {
   background: none;
 }
 
@@ -1640,11 +1655,11 @@
 
 .headerXbox-3G-4PF, .topSectionXbox-3fWLjS, .body-3ND3kc, .headerSpotify-zpWxgT, .theme-dark .bodyInner-245q0L, .theme-dark .footer-1fjuF6,
 .topSectionSpotify-1lI0-P, .theme-dark .headerNormal-T_seeN, .topSectionNormal-2-vo2m,
-.headerPlaying-j0WQBV, .headerStreaming-2FjmGz, .topSectionPlaying-1J5E4n, .topSectionStreaming-1Tpf5X {
+.headerPlaying-j0WQBV, .headerStreaming-2FjmGz, .topSectionPlaying-1J5E4n, .topSectionStreaming-1Tpf5X, .theme-dark .body-3iLsc4 {
   background: rgba(0, 0, 0, .16);
 }
 
-.theme-dark .bodyInner-245q0L, .theme-dark .footer-1fjuF6, .connectedAccountName-f8AEe2, .listRow-hutiT_ {
+.theme-dark .bodyInner-245q0L, .theme-dark .body-3iLsc4, .theme-dark .footer-1fjuF6, .connectedAccountName-f8AEe2, .listRow-hutiT_ {
   color: white;
 }
 
@@ -2115,7 +2130,7 @@
   box-shadow: none;
 }
 
-.css-1rckt42-menu {
+.css-n57xjs-menu {
   background-color: rgba(0, 0, 0, 0.76);
   box-shadow: none;
   color: white;
@@ -2168,7 +2183,8 @@
 /* Links */
 .standardSidebarView-3F1I7i a, .primary-jw0I4K a, .footer-3rDWdC a, .lookLink-9FtZy-.colorLink-35jkBc,
 .bda-slist .bda-footer a, .markup-2BOw-j a, .welcomeMessage-ULm0mo a, .theme-dark .filenameLinkWrapper-1-14c5, .theme-dark .filenameLinkWrapper-1-14c5 a,
-.topic-TCb_qw a, .emptyStateCTA-veJ2Cu a, .helpText-h3r3wC a, .colorStandard-2KCXvj a {
+.topic-TCb_qw a, .emptyStateCTA-veJ2Cu a, .helpText-h3r3wC a, .colorStandard-2KCXvj a,
+.editChannelButton-1dYN-G {
   color: lightgreen;
 }
 
