--- a/My_Theme_Collection/BubblesReturns.theme.css
+++ b/My_Theme_Collection/BubblesReturns.theme.css
@@ -9,11 +9,6 @@
 	background: url(https://images.alphacoders.com/151/151713.jpg) 30%/cover;
 }
 
-.colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O) {
-  background-color: rgba(0, 0, 0, .33);
-  color: #fff;
-}
-
 .sidebar-2K8pFh,
 .container-2lgZY8,
 .theme-dark .layer-3QrUeG,
@@ -26,7 +21,14 @@
 	background-color: transparent;
 }
 
+.theme-dark .children-19S4PO:after {
+	background: none;
+}
 
+.colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O) {
+  background-color: rgba(0, 0, 0, .33);
+  color: #fff;
+}
 
 
 .theme-dark .layers-3iHuyZ {
@@ -221,6 +223,9 @@
   padding: 0 3px;
 }
 
+.theme-dark .children-19S4PO:after {
+	background: none;
+}
 
 .theme-dark .icon-22AiRD {
 	color: white;
@@ -757,7 +762,7 @@
 	border: none;
 }
 
-.css-1rckt42-menu {
+.css-n57xjs-menu {
 	background-color: rgb(31, 31, 31);
 	box-shadow: none;
 	color: white;
@@ -831,7 +836,7 @@
 	background-size: 90px;
 }
 
-.theme-dark .footer-3rDWdC {
+.theme-dark .footer-2gL1pp {
 	background-color: transparent;
 	box-shadow: none;
 }
@@ -1183,7 +1188,7 @@
 	background: none;
 }
 
-.contentWrapper-2txmjs,
+.contentWrapper-SvZHNd,
 .emojiPicker-3PwZFl {
 	background: linear-gradient(5deg, transparent 62%, rgba(204, 227, 246, 0.626) 100%);
     border: 2px solid rgba(204, 227, 246, 0.468);
@@ -1192,28 +1197,28 @@
 	border-radius:4px;
 }
 
-.wrapper-2N7X54 {
+.wrapper-2Gsate {
 	background: none;
 }
 
 
-.navButtonActive-3RPAJy.active {
+.navButtonActive-1MkytQ.active {
 	background-color: rgba(204, 227, 246, 0.82) !important;
 	color: black;
 }
 
-.navButtonActive-3RPAJy:hover {
+.navButtonActive-1MkytQ:hover {
 	background-color: rgba(204, 227, 246, 0.33);
 }
 
-.navButtonActive-3RPAJy,
+.navButtonActive-1MkytQ,
 .emote-container:hover {
 	background: linear-gradient(5deg, transparent 62%, rgba(204, 227, 246, 0.626) 100%);
     border: 2px solid rgba(204, 227, 246, 0.468);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.557);
 	background-color: rgba(65, 95, 132, 0.776);
 }
-.contentWrapper-2txmjs .scroller-3vODG7 .emojiItem-109bjA.selected-39BZ4S {
+.contentWrapper-SvZHNd .scroller-3vODG7 .emojiItem-109bjA.selected-39BZ4S {
 	background-color: rgba(65, 95, 132, 0.776);
 	border: 2px solid rgba(204, 227, 246, 0.468);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.557);
@@ -1229,14 +1234,14 @@
   color: white;
 }
 
-.navButtonActive-3RPAJy {
+.navButtonActive-1MkytQ {
 	border-left: none;
 }
 
 
 
 
-.contentWrapper-2txmjs .diversitySelectorPopout-3FiGaM {
+.contentWrapper-SvZHNd .diversitySelectorPopout-3FiGaM {
 	background: rgba(0, 0, 0, 0.52);
 	border-color: transparent;
 }
@@ -1254,7 +1259,7 @@
 	box-shadow: none;
 }
 
-.categoryWrapper-UZ5YNj {
+.wrapper-1-Fsb8 {
 	background-color: rgba(0, 0, 0, 0.62);
 }
 
@@ -1490,8 +1495,14 @@
 	box-shadow: none;
 }
 
+.messages-3G3erD {
+  background-color: rgba(0,0,0,.5);
+  border-radius: 50px;
+}
+
 .theme-dark .messagesPopoutWrap-1MQ1bW,
-.theme-dark .searchResultsWrap-3-pOjs {
+.theme-dark .searchResultsWrap-3-pOjs,
+.container-enaOkj {
 	background-image: linear-gradient(45deg, rgba(4, 8, 120, 0.66) 0%, rgba(118, 13, 11, 0.54) 100%), url(https://images8.alphacoders.com/782/782017.jpg) !important;
 	border: none;
 }
@@ -1576,15 +1587,22 @@
 
 .theme-dark .jumpButton-3DTcS_,
 .theme-dark .jumpButton-1ol35X,
-.theme-dark .collapseButton-oSNpPX {
+.theme-dark .collapseButton-oSNpPX,
+.jumpButton-2dvRSC {
 	background-color: rgba(0, 0, 0, 0.56);
 	color: white !important;
 	border-radius: 20px;
 }
 .actionButtons-1sUUug, 
 .jumpButton-3DTcS_,
-.actionButtons-14P9IC {
+.actionButtons-14P9IC,
+.jumpButton-2dvRSC {
 	margin-right: 12px;
+}
+
+.emptyChannelIcon-3IXV5M {
+  border-radius: 50px;
+  background-color: rgba(255, 255, 255, .16);
 }
 
 .tab-EiCZG6, .totalResults-1yK_Ym {
@@ -2300,7 +2318,7 @@
 	border-radius: 50px;
 }
 
-.theme-dark .children-19S4PO:after {
+.children-19S4PO:after {
 	background: none;
 }
 
@@ -2621,7 +2639,8 @@
   .emptyStateSubtext-2njjqg a,
   .theme-dark .container-2x5lvQ section a,
   .colorStandard-2KCXvj a,
-  .theme-dark .filenameLinkWrapper-1-14c5 {
+	.theme-dark .filenameLinkWrapper-1-14c5,
+	.editChannelButton-1dYN-G {
 	  color: #2ccebe;
 	  text-shadow: 0 4px 4px black,0 4px 4px black,0 4px 4px black,0 4px 4px black,0 4px 4px black,0 0 4px black,0 0 4px black,0 0 4px black,0 0 4px black,0 0 4px black,0 0 4px black;
 	}
