--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -22,6 +22,7 @@
   background: none;
 }
 
+
 .theme-dark .layers-3iHuyZ {
   background: rgba(0, 0, 0, 0.7);
 }
@@ -492,7 +493,7 @@
   overflow: visible;
 }
 
-.theme-dark .footer-3rDWdC {
+.theme-dark .footer-2gL1pp {
   background-color: transparent;
   box-shadow: none;
 }
@@ -1015,10 +1016,16 @@
   background-color: transparent;
   box-shadow: none;
 }
-.theme-dark .messagesPopoutWrap-1MQ1bW {
+.theme-dark .messagesPopoutWrap-1MQ1bW,
+.container-enaOkj {
   background: linear-gradient(50deg, rgba(0,0,0,0.6993172268907564) 30%, rgba(120, 157, 191,1) 100%);
   border: none;
   box-shadow: 0 7px 10px 0 rgba(0,0,0,.8);
+}
+
+.messages-3G3erD {
+  background-color: rgba(0,0,0,.5);
+  border-radius: 4px;
 }
 
 .theme-dark .messagesPopout-24nkyi {
@@ -1261,7 +1268,11 @@
   color: white;
 }
 
-.contentWrapper-2txmjs,
+.colorDefault-2K3EoJ.focused-3afm-j {
+  background-color: rgba(0, 0, 0, .26);
+}
+
+.contentWrapper-SvZHNd,
 .emojiPicker-3PwZFl {
   background-color: rgba(0,0,0,0.8);
   border: none;
@@ -1275,13 +1286,13 @@
   border-style: solid;
   background: none;
 }
-.categoryWrapper-UZ5YNj {
+.wrapper-1-Fsb8 {
   background-color: #789dbf;
 }
-.contentWrapper-2txmjs .scroller-3vODG7 .emojiItem-109bjA.selected-39BZ4S {
+.contentWrapper-SvZHNd .scroller-3vODG7 .emojiItem-109bjA.selected-39BZ4S {
   background-color: rgba(255,255,255,.12);
 }
-.contentWrapper-2txmjs .diversitySelectorPopout-3FiGaM {
+.contentWrapper-SvZHNd .diversitySelectorPopout-3FiGaM {
   background: black;
   border-color: transparent;
 }
@@ -1408,9 +1419,15 @@
   box-shadow: none;
   background: none;
 }
+
+.emptyChannelIcon-3IXV5M {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .26);
+}
 .theme-dark .jumpButton-3DTcS_,
 .theme-dark .jumpButton-1ol35X,
-.theme-dark .collapseButton-oSNpPX {
+.theme-dark .collapseButton-oSNpPX,
+.jumpButton-2dvRSC {
   background-color: #789dbf; 
   color: white;
 }
@@ -1845,7 +1862,8 @@
 .theme-dark .container-2x5lvQ section a,
 .colorStandard-2KCXvj a,
 .fakeLink-26oLcc,
-.metadataContent-3c_ZXw a {
+.metadataContent-3c_ZXw a,
+.editChannelButton-1dYN-G {
     color: #6670ED;
 }
 .lookLink-9FtZy-.colorLink-35jkBc:hover .contents-18-Yxp {
@@ -1885,19 +1903,19 @@
 }
 
 /* Emotes Picker */
-.navButtonActive-3RPAJy {
+.navButtonActive-1MkytQ {
   background: black;
   border-left: none;
   box-shadow: none;
 }
 
-.navButtonActive-3RPAJy:hover {
+.navButtonActive-1MkytQ:hover {
   background-color: #6f9dc8;
 }
 
 
 
-.wrapper-2N7X54 {
+.wrapper-2Gsate {
   background: none;
 }
 
@@ -1910,7 +1928,7 @@
 }
 
 
-.navButtonActive-3RPAJy.active {
+.navButtonActive-1MkytQ.active {
   background-color: #789dbf !important;
 }
 
