--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -504,7 +504,7 @@
   overflow: visible;
 }
 
-.theme-dark .footer-3rDWdC {
+.theme-dark .footer-2gL1pp {
   background-color: transparent;
   box-shadow: none;
 }
@@ -1026,10 +1026,16 @@
   background-color: transparent;
   box-shadow: none;
 }
-.theme-dark .messagesPopoutWrap-1MQ1bW {
+.theme-dark .messagesPopoutWrap-1MQ1bW,
+.container-enaOkj {
   background: linear-gradient(50deg, rgba(0,0,0,0.6993172268907564) 30%, rgba(18, 155, 27,1) 100%);
   border: none;
   box-shadow: 0 7px 10px 0 rgba(0,0,0,.8);
+}
+
+.messages-3G3erD {
+  background-color: rgba(0,0,0,.5);
+  border-radius: 4px;
 }
 
 .theme-dark .messagesPopout-24nkyi {
@@ -1262,7 +1268,7 @@
   background: none;
 }
 
-.contentWrapper-2txmjs,
+.contentWrapper-SvZHNd,
 .emojiPicker-3PwZFl {
   background-color: rgba(0,0,0,0.8);
   border: none;
@@ -1276,13 +1282,13 @@
   border-style: solid;
   background: none;
 }
-.categoryWrapper-UZ5YNj {
+.wrapper-1-Fsb8 {
   background-color: #129b1a;
 }
-.contentWrapper-2txmjs .scroller-3vODG7 .emojiItem-109bjA.selected-39BZ4S {
+.contentWrapper-SvZHNd .scroller-3vODG7 .emojiItem-109bjA.selected-39BZ4S {
   background-color: rgba(255,255,255,.12);
 }
-.contentWrapper-2txmjs .diversitySelectorPopout-3FiGaM {
+.contentWrapper-SvZHNd .diversitySelectorPopout-3FiGaM {
   background: black;
   border-color: transparent;
 }
@@ -1301,6 +1307,10 @@
 
 .colorDefault-2K3EoJ.focused-3afm-j .check-1JyqgN {
   color: white;
+}
+
+.colorDefault-2K3EoJ.focused-3afm-j {
+  background-color: rgba(0, 0, 0, .26);
 }
 
 .theme-dark .mentioned-xhSam7,
@@ -1416,9 +1426,15 @@
   box-shadow: none;
   background: none;
 }
+
+.emptyChannelIcon-3IXV5M {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .26);
+}
 .theme-dark .jumpButton-3DTcS_,
 .theme-dark .jumpButton-1ol35X,
-.theme-dark .collapseButton-oSNpPX {
+.theme-dark .collapseButton-oSNpPX,
+.jumpButton-2dvRSC {
   background-color: #129b1a; 
   color: white;
 }
@@ -1878,7 +1894,8 @@
 .lookLink-9FtZy-.colorBrand-3pXr91,
 .emptyStateSubtext-2njjqg a,
 .theme-dark .container-2x5lvQ section a,
-.colorStandard-2KCXvj a {
+.colorStandard-2KCXvj a,
+.editChannelButton-1dYN-G {
     color: #6670ED;
 }
 .lookLink-9FtZy-.colorLink-35jkBc:hover .contents-18-Yxp {
@@ -1919,19 +1936,19 @@
 }
 
 /* Emotes Picker */
-.navButtonActive-3RPAJy {
+.navButtonActive-1MkytQ {
   background: black;
   border-left: none;
   box-shadow: none;
 }
 
-.navButtonActive-3RPAJy:hover {
+.navButtonActive-1MkytQ:hover {
   background-color: #04820C;
 }
 
 
 
-.wrapper-2N7X54 {
+.wrapper-2Gsate {
   background: none;
 }
 
@@ -1943,7 +1960,7 @@
   top: 13px;
 }
 
-.navButtonActive-3RPAJy.active {
+.navButtonActive-1MkytQ.active {
   background-color: #129b1a !important;
 }
 
