--- a/My_Theme_Collection/Kemono_Friends.theme.css
+++ b/My_Theme_Collection/Kemono_Friends.theme.css
@@ -165,7 +165,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     border-radius: 7px;
 }
 
-.theme-dark .footer-3rDWdC {
+.theme-dark .footer-2gL1pp {
     background-color: transparent;
     box-shadow: none;
 }
@@ -344,7 +344,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     border-radius: 7px 7px 0 0;
 }
 
-.css-1rckt42-menu {
+.css-n57xjs-menu {
     background-color: rgba(0, 0, 0, 0.46);
     box-shadow: none;
     color: white;
@@ -1248,8 +1248,14 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 }
 
 .theme-dark .searchResultsWrap-3-pOjs,
-.theme-dark .messagesPopoutWrap-1MQ1bW {
+.theme-dark .messagesPopoutWrap-1MQ1bW,
+.container-enaOkj {
     background-color: rgba(28, 28, 30, 0.86);
+}
+
+.messages-3G3erD {
+    background-color: rgba(0,0,0,.5);
+    border-radius: 4px;
 }
 
 .theme-dark .messagesPopout-24nkyi {
@@ -1336,9 +1342,15 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     background-color: black;
 }
 
+.emptyChannelIcon-3IXV5M {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, .26);
+}
+
 .theme-dark .jumpButton-1ol35X,
 .theme-dark .jumpButton-3DTcS_,
-.theme-dark .collapseButton-oSNpPX {
+.theme-dark .collapseButton-oSNpPX,
+.jumpButton-2dvRSC {
     background-color: #1a1919;
     color: #728e3d !important;
 }
@@ -1567,7 +1579,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 }
 
 
-.contentWrapper-2txmjs, .emojiPicker-3PwZFl {
+.contentWrapper-SvZHNd, .emojiPicker-3PwZFl {
     background: linear-gradient(45deg, #728e3d 0%, #212121 67%);
 }
 
@@ -1585,22 +1597,22 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 }
 
 
-.navButtonActive-3RPAJy {
+.navButtonActive-1MkytQ {
     background: #0e0e0e;
     border-left: none;
     box-shadow: none;
 }
 
-.wrapper-2N7X54 {
+.wrapper-2Gsate {
     background: none;
 }
 
   
-.navButtonActive-3RPAJy:hover {
+.navButtonActive-1MkytQ:hover {
     background-color: #181818;
 }
 
-.navButtonActive-3RPAJy.active {
+.navButtonActive-1MkytQ.active {
     background-color: #728e3d !important;
 }
 
@@ -1620,12 +1632,12 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     color: white;
 }
 
-.contentWrapper-2txmjs .diversitySelectorPopout-3FiGaM {
+.contentWrapper-SvZHNd .diversitySelectorPopout-3FiGaM {
     background: rgba(0, 0, 0, 0.42);
     border-color: transparent;
 }
 
-.categoryWrapper-UZ5YNj {
+.wrapper-1-Fsb8 {
     background-color: rgba(0, 0, 0, .3);
 }
 
@@ -2234,7 +2246,8 @@ body, div, span, textarea, ::-webkit-input-placeholder {
   .emptyStateSubtext-2njjqg a,
   .theme-dark .container-2x5lvQ section a,
   .fakeLink-26oLcc,
-  .metadataContent-3c_ZXw a {
+  .metadataContent-3c_ZXw a,
+  .editChannelButton-1dYN-G {
       color: #66cff9;
 }
 
