--- a/My_Theme_Collection/BubblesReturns.theme.css
+++ b/My_Theme_Collection/BubblesReturns.theme.css
@@ -1001,6 +1001,10 @@
 	padding: 0;
 }
 
+.members-1998pB>div {
+	background-color: transparent;
+}
+
 .members-1998pB .selected-aXhQR6 .layout-2DM8Md {
   background: linear-gradient(5deg, transparent 52%, rgba(204, 227, 246, 0.8) 100%);
   border: 2px solid rgba(204, 227, 246, 0.60);
