--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -63,6 +63,9 @@
   background-color: transparent;
 }
 
+.members-1998pB>div {
+  background-color: transparent;
+}
 
 
 /* BetterDiscord and Discord Settings */
