--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -58,6 +58,10 @@
   background-color: transparent;
 }
 
+.members-1998pB>div {
+  background-color: transparent;
+}
+
 
 /* BetterDiscord and Discord Settings */
 .theme-dark .closeButton-1tv5uR {
