--- a/My_Theme_Collection/Great_Mountain_Site.theme.css
+++ b/My_Theme_Collection/Great_Mountain_Site.theme.css
@@ -54,6 +54,9 @@
 .theme-dark .members-1998pB {
   background-color: transparent;
 }
+.members-1998pB>div {
+  background-color: transparent;
+}
 
 
 /* BetterDiscord and Discord Settings */
