--- a/My_Theme_Collection/Kemono_Friends.theme.css
+++ b/My_Theme_Collection/Kemono_Friends.theme.css
@@ -60,6 +60,10 @@ body, div, span, textarea, ::-webkit-input-placeholder {
    background-color: rgba(0, 0, 0, 0.25);
 }
 
+.members-1998pB>div {
+    background-color: transparent;
+}
+
 .theme-dark .layers-3iHuyZ {
     background: rgba(0, 0, 0, 0.42);
 }
