--- a/My_Theme_Collection/No_Game_No_Life.theme.css
+++ b/My_Theme_Collection/No_Game_No_Life.theme.css
@@ -1662,6 +1662,10 @@
     background-color: transparent;
 }
 
+.members-1998pB>div {
+    background-color: transparent;
+}
+
 .markup-2BOw-j pre {
     border: none;
     background: none;
