--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -1994,6 +1994,10 @@
     background-color: rgba(0, 0, 0, 0.33);
 }
 
+.members-1998pB>div {
+    background-color: transparent;
+}
+
 .activity-E-0FeD {
     color: white;
 }
