--- a/My_Theme_Collection/BNHA.theme.css
+++ b/My_Theme_Collection/BNHA.theme.css
@@ -53,6 +53,9 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 .theme-dark .members-1998pB {
    background-color: rgba(0, 0, 0, 0.25);
 }
+.members-1998pB>div {
+    background-color: transparent;
+}
 
 .theme-dark .layers-3iHuyZ {
     background: rgba(0, 0, 0, 0.42);
