--- a/My_Theme_Collection/CatJar.theme.css
+++ b/My_Theme_Collection/CatJar.theme.css
@@ -1359,6 +1359,10 @@
   background-color: rgba(0,0,0,.3);
 }
 
+.members-1998pB>div {
+  background-color: transparent;
+}
+
 .titleAvatar-2e6spe foreignObject, .viewer-2fFR_X foreignObject, .memberListItem-2ZX2pl foreignObject {
   mask: none;
 }
