--- a/My_Theme_Collection/Sunset_Theme.theme.css
+++ b/My_Theme_Collection/Sunset_Theme.theme.css
@@ -2107,6 +2107,10 @@
     background-color: transparent;
 }
 
+.members-1998pB>div {
+    background-color: transparent;
+}
+
 .markup-2BOw-j pre {
     border: none;
     background: none;
