--- a/My_Theme_Collection/AkameGaKill.theme.css
+++ b/My_Theme_Collection/AkameGaKill.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Akame_No_Kill", "version":"1", "description":"Akame from Akame No Kill", "author":"DevilsLynAvenged"}*//
+//META{"name":"Akame_Ga_Kill", "version":"1", "description":"Akame from Akame No Kill", "author":"DevilsLynAvenged"}*//
 
 #app-mount .app-2rEoOp {
   background-color: transparent;
