--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -602,7 +602,7 @@
 }
 
 .theme-dark .uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
-    background-color: #8da0e0
+    background-color: #8da0e0;
     border: 3px solid black;
     border-radius: 10%;
     box-shadow: 5px 9px 8px rgba(0, 0, 0, 0.42),5px 4px 8px rgba(0, 0, 0, 0.42),0 0 18px rgba(0, 0, 0, 0.7);
@@ -2194,7 +2194,7 @@
   }
 
 /* Main Color */
-.color-primary { #8da0e0  rgba(141, 160, 224, 1.0); }
+.color-primary { color: #8da0e0  rgba(141, 160, 224, 1.0); }
 /* Main Color */ 
 
 .unreadPill-2HyYtt {
@@ -2208,7 +2208,7 @@
     fill: #8da0e0;
 }
   
-.form-2fGMdU:before,
+.theme-dark .form-2fGMdU:before,
 .separator-42rNt0 {
     background: none;}
   
@@ -2249,4 +2249,9 @@
     height: 1.7rem;
     width: 1.7rem;
     margin-left: 6px;
+}
+
+.akaBadge-1M-1Gw {
+    background-color: #8da0e0;
+    color: white;
 }
