--- a/My_Theme_Collection/Winter_Returns.theme.css
+++ b/My_Theme_Collection/Winter_Returns.theme.css
@@ -598,7 +598,7 @@
 }
 
 .theme-dark .uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
-    background-color: #6b82ce
+    background-color: #6b82ce;
     border: 3px solid black;
     border-radius: 10%;
     box-shadow: 5px 9px 8px rgba(0, 0, 0, 0.42),5px 4px 8px rgba(0, 0, 0, 0.42),0 0 18px rgba(0, 0, 0, 0.7);
@@ -2199,7 +2199,7 @@
   fill: #6b82ce;
 }
 
-.form-2fGMdU:before,
+.theme-dark .form-2fGMdU:before,
 .separator-42rNt0 {
   background: none;
 }
@@ -2242,6 +2242,11 @@
     margin-left: 6px;
 }
 
+.akaBadge-1M-1Gw {
+    background-color: #6b82ce;
+    color: white;
+}
+
 /* Main Color */
-.color-primary { #6b82ce  rgba(107, 130, 206, 1.0); }
+.color-primary { color:#6b82ce  rgba(107, 130, 206, 1.0); }
 /* Main Color */ 
