Small fix again

--- a/Winter_Returns.theme.css
+++ b/Winter_Returns.theme.css
@@ -21,6 +21,41 @@
     background: none;
 }
 
+.theme-dark .username-1A8OIy[style*="color: rgb(1, 1, 1)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(2, 2, 2)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(3, 3, 3)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(4, 4, 4)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(5, 5, 5,)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(6, 6, 6)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(7, 7, 7)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(8, 8, 8)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(9, 9, 9)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(10, 10, 10)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(11, 11, 11)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(12, 12, 12)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(13, 13, 13)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(14, 14, 14)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(15, 15, 15)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(16, 16, 16)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(17, 17, 17)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(18, 18, 18)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(19, 19, 19)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(20, 20, 20)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(21, 21, 21)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(22, 22, 22)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(23, 23, 23)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(24, 24, 24)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(25, 25, 25)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(26, 26, 26)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(27, 27, 27)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(28, 28, 28)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(29, 29, 29)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(30, 30, 30)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(31, 31, 31)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(32, 32, 32)"] {
+   text-shadow: 0 0 6px white, 0 0 6px white !important;
+}
+
 .colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O) {
     background-color: rgba(0, 0, 0, .33);
     color: #fff;
