Another small fix

--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -46,9 +46,42 @@
 .theme-dark .username-1A8OIy[style*="color: rgb(29, 29, 29)"],
 .theme-dark .username-1A8OIy[style*="color: rgb(30, 30, 30)"],
 .theme-dark .username-1A8OIy[style*="color: rgb(31, 31, 31)"],
-.theme-dark .username-1A8OIy[style*="color: rgb(32, 32, 32)"] {
+.theme-dark .username-1A8OIy[style*="color: rgb(32, 32, 32)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(1, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(2, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(3, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(4, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(5, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(6, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(7, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(8, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(9, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(10, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(11, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(12, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(13, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(14, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(15, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(16, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(17, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(18, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(19, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(20, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(21, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(22, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(23, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(24, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(25, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(26, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(27, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(28, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(29, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(30, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(31, 0, 0)"],
+.theme-dark .username-1A8OIy[style*="color: rgb(32, 0, 0)"] {
    text-shadow: 0 0 6px white, 0 0 6px white !important;
 }
+
 
 .theme-dark .children-19S4PO:after {
     background: none;
